관리자 - 뉴스 수정

--- a/src/app/admin/news/view/view.component.html
+++ b/src/app/admin/news/view/view.component.html
@@ -6,7 +6,7 @@
     <div [innerHTML]="news.content"></div>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button mat-button-sm color="primary">수정</button>
+    <button mat-raised-button mat-button-sm color="primary" (click)="gotoModify(news)">수정</button>
     <button mat-raised-button mat-button-sm color="warn">삭제</button>
   </mat-card-actions>
 </mat-card>
