--- a/src/app/admin/news/write/write.component.html
+++ b/src/app/admin/news/write/write.component.html
@@ -14,7 +14,7 @@
     <div>
       <label for="uploadedImage">업로드 이미지 선택</label>
       <input type="file" (change)="fileChange($event)" id="uploadedImage"
-             accept="images/*" #newFile>
+             accept="image/*" #newFile>
     </div>
 
     <div style="margin-top: 1em;" fxLayoutAlign="center center">
